# arangodb-types

./: .gitignore  Cargo.toml  LICENSE  README.md
arangodb-models/: Cargo.toml
arangodb-models/docs/: field_attributes.md  options.md  struct_attributes.md
arangodb-models/src/: constants.rs  errors.rs  lib.rs
arangodb-models/src/data/: attributes_field.rs  attributes_struct.rs  info_field.rs  info_model.rs  options.rs
arangodb-models/src/model_builders/: build_api.rs  build_db.rs  mod.rs
arangodb-models/src/type_builders/: build_api_enum.rs  build_api_struct.rs  build_db_enum.rs  build_db_struct.rs  mod.rs
arangodb-models/src/utils/: nodes.rs  strings.rs
arangodb-tests/: Cargo.toml
arangodb-tests/src/: lib.rs
arangodb-tests/src/tests/: constants.rs  mod.rs
arangodb-tests/src/tests/db_mutex/: acquire.rs  acquire_aql.rs  acquire_list.rs  alive.rs  alive_list.rs  mod.rs  model.rs  release.rs  release_list.rs  types.rs
arangodb-tests/src/tests/remote_mutex/: acquire.rs  acquire_aql.rs  acquire_list.rs  alive.rs  alive_list.rs  release.rs  release_list.rs
arangodb-types/: Cargo.toml
arangodb-types/src/: constants.rs  lib.rs
arangodb-types/src/aql/: mod.rs  result.rs
arangodb-types/src/aql/aql_functions/: mod.rs
arangodb-types/src/documents/: fields.rs
arangodb-types/src/traits/: aql_mapping.rs  collection.rs  collection_edge.rs  document.rs  document_api.rs  document_edge.rs  document_paginated.rs  document_synchronized.rs  mod.rs  utils.rs
arangodb-types/src/types/: database_information.rs  id.rs  mod.rs  mutex.rs  nullable_option.rs  number.rs  paginated_request.rs  reference.rs  reference_api.rs  uuid.rs
arangodb-types/src/types/dates/: date.rs  datetime.rs  daytime.rs  duration.rs  expiration.rs  mod.rs
arangodb-types/src/types/filters/: expressions.rs  fields.rs  mod.rs  stats.rs  types.rs
arangodb-types/src/types/filters/api/: expressions.rs  fields.rs  mod.rs
arangodb-types/src/utilities/: mod.rs
arangodb-types/src/utilities/db_mutex/: errors.rs  mod.rs
arangodb-types/src/utilities/remote_mutex/: mod.rs
docker/: docker-compose.yaml
