[package]
name = "arangodb-tests"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.63"
arcstr = { version = "1.1.4", features = ["serde", "substr-usize-indices"] }
async-trait = "0.1.57"
lazy_static = "1.4.0"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["sync", "time", "rt-multi-thread", "macros"] }

[dependencies.arangodb-models]
path = "../arangodb-models"

[dependencies.arangodb-types]
path = "../arangodb-types"
features = ["test", "db_mutex"]