[package]
name = "arangodb-types"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2018"

[dependencies]
arangors = { version = "0.5.0", features = ["arango3_7"] }
arcstr = { version = "1.1.1", features = ["serde", "substr-usize-indices"] }
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
nanoid = "0.4.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.69"
uclient = "0.1.1"

[dependencies.arangodb-models]
path = "../arangodb-models"