[package]
name = "arangodb-types"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2021"

[features]
test = []
db_mutex = ["log", "rand", "tokio"]

[dependencies]
arangors = { version = "0.5.0", features = ["arango3_7"] }
arcstr = { version = "1.1.1", features = ["serde", "substr-usize-indices"] }
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
log = { version = "0.4.14", optional = true }
nanoid = "0.4.0"
rand = { version = "0.8.4", optional = true }
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.69"
uclient = "0.1.1"
tokio = { version = "1.14.0", features = ["sync", "time"], optional = true }

[dependencies.arangodb-models]
path = "../arangodb-models"