[package]
name = "arangodb-types"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2021"

[features]
test = []
db_mutex = ["log", "rand", "tokio"]

[dependencies]
anyhow = "1.0.63"
arcstr = { version = "1.1.4", features = ["serde", "substr-usize-indices"] }
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
log = { version = "0.4.17", optional = true }
nanoid = "0.4.0"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0.85"
urlencoding = "2.1.0"
tokio = { version = "1.14.1", features = ["sync", "time"], optional = true }

[dependencies.arangors]
version = "0.5.2"
features = ["arango3_7"]
git = "https://github.com/juliotpaez/arangors.git"

[dependencies.arangodb-models]
path = "../arangodb-models"